fixing the spacing between placeholder-icon and text input based on the change to using a flex gap for spacing chips

--- a/packages/calcite-components/src/components/combobox/combobox.scss
+++ b/packages/calcite-components/src/components/combobox/combobox.scss
@@ -134,6 +134,12 @@
 
 .input--icon {
   padding-block: 0;
+  padding-inline: var(--calcite-combobox-item-spacing-unit-s);
+}
+
+:host([scale="m"]) .input--icon,
+:host([scale="l"]) .input--icon {
+  padding-inline: 0.25rem;
 }
 
 .input-wrap {
